# Visi-Git

./: .gitignore  CLAUDE.md  create-icons.ps1  docs.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  docs.md  types.ts
src-tauri/: Cargo.toml  docs.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: docs.md  lib.rs  main.rs
src/components/: CommitSelector.test.tsx  CommitSelector.tsx  ErrorBoundary.tsx  FileList.test.tsx  FileList.tsx  FolderPicker.tsx  ImageComparer.test.tsx  ImageComparer.tsx  docs.md
src/hooks/: docs.md  useGitRepo.ts
src/test/: docs.md  setup.ts
src/utils/: docs.md  pixelDiff.test.ts  pixelDiff.ts
